[package]
name = "ipv8"
version = "0.1.0"
authors = ["Dany Sluijk <dany@atlasdev.nl>"]
edition = "2018"
description = "IPv8 implementation for rust."
homepage = "https://ip-v8.github.io/rust-ipv8/ipv8/"
documentation = "https://ip-v8.github.io/rust-ipv8/ipv8/"
repository = "https://github.com/ip-v8/rust-ipv8"
readme = "readme.md"
license-file = "license.md"

exclude = [
  ".editorconfig",
  ".travis.yml",
  ".codeclimate.yml"
]

[badges]
travis-ci = { repository = "ip-v8/rust-ipv8", branch = "develop" }
maintenance = { status = "experimental" }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
bincode = "1.1.3"
rust_sodium = "0.10.2"
openssl = { version = "0.10", features = ["vendored"] }

[dev-dependencies]
criterion = "0.2.11"

[[bench]]
name = "bench_crypto"
harness = false

[profile.release]
lto = true # Enables link time optimization (allows for inlining cross-crate)
opt-level = 3 # Ensures optimization level is set to the maximum

[profile.bench]
lto = true
opt-level = 3
