[package]
name = "ipv8"
version = "0.1.0"
authors = ["jonay2000 <jonabent@gmail.com>", "NULLx76 <victor@xirion.net>", "Dany Sluijk <dany@atlasdev.nl>"]
edition = "2018"
description = "IPv8 implementation for rust."
homepage = "https://ip-v8.github.io/rust-ipv8/ipv8/"
documentation = "https://ip-v8.github.io/rust-ipv8/ipv8/"
repository = "https://github.com/ip-v8/rust-ipv8"
readme = "readme.md"
license-file = "license.md"

[lib]
crate-type = ["lib", "cdylib"]

exclude = [
    ".editorconfig",
    ".travis.yml",
    ".codeclimate.yml"
]

[badges]
travis-ci = { repository = "ip-v8/rust-ipv8", branch = "develop" }
maintenance = { status = "experimental" }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
bincode = "1.1.3"
rust_sodium = "0.10.2"
lazy_static = "1.2.0"
log = "0.4"
mio = "0.6.19"
rayon = "1.0.3"
sha-1 = "0.8.1"

[dev-dependencies]
criterion = "0.2.11"
simple_logger = "1.3.0"
simulacrum = "0.3.1"

[[bench]]
name = "bench_crypto"
harness = false

[[bench]]
name = "networking_throughput"
harness = false

[profile.release]
lto = true # Enables link time optimization (allows for inlining cross-crate)
opt-level = 3 # Ensures optimization level is set to the maximum

[profile.bench]
lto = true
opt-level = 3
